crates/ruff_cli/tests/snapshots/integration_test__show_source.snap
---
source: crates/ruff_cli/tests/integration_test.rs
info:
  program: ruff
  args:
    - "-"
    - "--isolated"
    - "--no-cache"
    - "--format"
    - text
    - "--show-source"
  stdin: l = 1
---
success: false
exit_code: 1
----- stdout -----
-:1:1: E741 Ambiguous variable name: `l`
  |
1 | l = 1
  | ^ E741
  |

Found 1 error.

----- stderr -----

