crates/ruff_cli/tests/snapshots/integration_test__show_statistics.snap
---
source: crates/ruff_cli/tests/integration_test.rs
info:
  program: ruff
  args:
    - "-"
    - "--isolated"
    - "--no-cache"
    - "--format"
    - text
    - "--select"
    - F401
    - "--statistics"
  stdin: "import sys\nimport os\n\nprint(os.getuid())\n"
---
success: false
exit_code: 1
----- stdout -----
1	F401	[*] `sys` imported but unused

----- stderr -----

