crates/ruff_cli/tests/snapshots/integration_test__stdin_autofix.snap
---
source: crates/ruff_cli/tests/integration_test.rs
info:
  program: ruff
  args:
    - "-"
    - "--isolated"
    - "--no-cache"
    - "--format"
    - text
    - "--fix"
  stdin: "import os\nimport sys\n\nprint(sys.version)\n"
---
success: true
exit_code: 0
----- stdout -----
import sys

print(sys.version)

----- stderr -----

