crates/ruff_cli/tests/snapshots/integration_test__stdin_autofix_when_no_issues_should_still_print_contents.snap
---
source: crates/ruff_cli/tests/integration_test.rs
info:
  program: ruff
  args:
    - "-"
    - "--isolated"
    - "--no-cache"
    - "--format"
    - text
    - "--fix"
  stdin: "import sys\n\nprint(sys.version)\n"
---
success: true
exit_code: 0
----- stdout -----
import sys

print(sys.version)

----- stderr -----

