crates/ruff_cli/tests/snapshots/integration_test__stdin_error.snap
---
source: crates/ruff_cli/tests/integration_test.rs
info:
  program: ruff
  args:
    - "-"
    - "--format"
    - text
    - "--isolated"
    - "--no-cache"
  stdin: "import os\n"
---
success: false
exit_code: 1
----- stdout -----
-:1:8: F401 [*] `os` imported but unused
Found 1 error.
[*] 1 potentially fixable with the --fix option.

----- stderr -----

